# research-archive-platform

./: .gitignore  AGENTS.md  PROJECT_MEMORY.md  README.md  amplify.yml  logs-api.sh  open-api.sh  open-ui.sh
api/: Dockerfile  pom.xml
etl/: .dockerignore  Dockerfile.loader  analyze_protocol_parent_resolution.py  archive_attachments.py  archive_subaward_attachments.py  export_protocol_versions.py  load_awards_from_csv.py  load_composite_from_s3.py  load_from_s3.py  load_negotiations_from_csv.py  load_proposals_from_csv.py  load_protocol_actions.py  load_protocol_amend_renewals.py  load_protocol_funding.py  load_protocol_locations.py  load_protocol_personnel.py  load_protocol_research_areas.py  load_protocol_submissions.py  load_protocols_from_csv.py  load_subawards_from_csv.py  pyproject.toml  run_composite_export.py  run_export.py  run_protocol_personnel_reconciliation.py  run_protocol_reconciliation.py
etl/archive_etl/attachments/: __init__.py  manifest.py  models.py  oracle_blob.py  runner.py  s3_storage.py
etl/archive_etl/config/: settings.py
etl/archive_etl/extract/: excel.py
etl/config/: settings.yaml
etl/tests/: __init__.py  test_archived_attachment_destination.py  test_attachment_archival.py  test_award_loader_framework.py  test_oracle_blob_readers.py  test_pipeline_framework.py  test_protocol_action_loader.py  test_protocol_amend_renewal_loader.py  test_protocol_core_loader.py  test_protocol_funding_loader.py  test_protocol_location_loader.py  test_protocol_personnel_loader.py  test_protocol_research_area_loader.py  test_protocol_submission_loader.py
(+341 files in other folders)
